// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`colour sampled from a position-dependent texture > human, aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "fbe7e10f7f25feee",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 22.19,
  "mesh": "d5444fc08fd483e8",
  "vertices": 1246,
}
`;

exports[`colour sampled from a position-dependent texture > human, blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "7368defc1a7e5a35",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`colour sampled from a position-dependent texture > human, rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "7368defc1a7e5a35",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`colour sampled from a position-dependent texture > legacy animal, aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "50ce06ea4fd336ea",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 28.64,
  "mesh": "3247fc015e9f5902",
  "vertices": 1023,
}
`;

exports[`colour sampled from a position-dependent texture > legacy animal, blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "b700e544632f319b",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`colour sampled from a position-dependent texture > legacy animal, rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "b700e544632f319b",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`human renderer golden output > E (spread): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "dfe0cfb313bd9183",
  "leftEyeOpenPx": 13.87,
  "lipGapPx": 9.31,
  "mesh": "2998948d83b0faf4",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > FF: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24410,
  "drawing": "3e5a7c6db60794b4",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": 2.05,
  "mesh": "0cc103b49903d9c1",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > PP (closed): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "d57978b77ce89d4a",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": 1.03,
  "mesh": "bbf58c7f0ec61de7",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "24f6377482e8627c",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": 17.63,
  "mesh": "d0f91854548765ca",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "be5d843e8341904e",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": -0.04,
  "mesh": "58159f581dae4648",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > blink half: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24153,
  "drawing": "32b3e838852847b2",
  "leftEyeOpenPx": 10.3,
  "lipGapPx": -0.04,
  "mesh": "bd1f7cd51f63c607",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > gaze right-up: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24171,
  "drawing": "184a2a8c3876452b",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": -0.04,
  "mesh": "58159f581dae4648",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24244,
  "drawing": "7522610bf0ed38a4",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": 12.43,
  "mesh": "6cac4289f5216b68",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "be5d843e8341904e",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": -0.04,
  "mesh": "58159f581dae4648",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > smile: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "08ab73ff7b30ba92",
  "leftEyeOpenPx": 13.44,
  "lipGapPx": -0.04,
  "mesh": "3a4c06cb78cd0fc4",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > E (spread): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "a8f9da5580586bf8",
  "leftEyeOpenPx": 17.46,
  "lipGapPx": 11.72,
  "mesh": "2f51a6ee0365874b",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > FF: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24410,
  "drawing": "88eb8bc427821c9c",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 2.59,
  "mesh": "2826939e686ec3fa",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > PP (closed): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "ba8e25bf63470ad1",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 1.29,
  "mesh": "8ea9bf85e3bcc660",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "f5d0ca11bda2ff30",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 22.19,
  "mesh": "d5444fc08fd483e8",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "0c543e352bb80d3d",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > blink half: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24153,
  "drawing": "8aab2fd524227475",
  "leftEyeOpenPx": 12.96,
  "lipGapPx": -0.06,
  "mesh": "d1b723badef9db5a",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > gaze right-up: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24171,
  "drawing": "1b04dd521a65e7ab",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24244,
  "drawing": "c47b81933f77bc90",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 15.65,
  "mesh": "faa6f17c6d3d5f27",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "0c543e352bb80d3d",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > smile: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "bc6135613f5a8d53",
  "leftEyeOpenPx": 16.91,
  "lipGapPx": -0.06,
  "mesh": "f639068d056acd76",
  "vertices": 1246,
}
`;

exports[`legacy animal rig golden output > face, E (spread): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20041,
  "drawing": "901201b2e31f5928",
  "leftEyeOpenPx": 26.01,
  "lipGapPx": 22.03,
  "mesh": "125b199fcbc20c7f",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, FF: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "14da7ab6c8eb87f8",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 9.03,
  "mesh": "248f452b9f4aa1a9",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, PP (closed): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "0b984a18873367cb",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 3.05,
  "mesh": "120531ccf9763d42",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "c3b6500e86b6b747",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 30.01,
  "mesh": "a0b4b7a06cb02ab6",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "4ad882dfe66b080e",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, blink half: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19683,
  "drawing": "b40f1878e9657a1e",
  "leftEyeOpenPx": 18.5,
  "lipGapPx": 11.06,
  "mesh": "51872603303306bd",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, gaze right-up: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19701,
  "drawing": "7d8f400b76460eca",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "85dd5ee252da6eb9",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 25.02,
  "mesh": "876aaf23a1772434",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "4ad882dfe66b080e",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, smile: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "2df7fa8d7b3a205c",
  "leftEyeOpenPx": 24.43,
  "lipGapPx": 11.06,
  "mesh": "18d148c1361f3587",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, E (spread): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20041,
  "drawing": "a3a2d96ae98e1bb4",
  "leftEyeOpenPx": 25.69,
  "lipGapPx": 21.76,
  "mesh": "1fb491d04cc38250",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, FF: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "c1216a7720d36904",
  "leftEyeOpenPx": 26,
  "lipGapPx": 8.92,
  "mesh": "8f37eae037ff5926",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, PP (closed): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "ce5ecd298f43df9a",
  "leftEyeOpenPx": 26,
  "lipGapPx": 3.01,
  "mesh": "36171018a6ca74de",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "edf13e207a981b45",
  "leftEyeOpenPx": 26,
  "lipGapPx": 29.64,
  "mesh": "b06f0148f808499e",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "f502bcd67bfe6534",
  "leftEyeOpenPx": 26,
  "lipGapPx": 10.92,
  "mesh": "c4993826112a4e25",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, blink half: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19683,
  "drawing": "5df259f338c5802c",
  "leftEyeOpenPx": 18.27,
  "lipGapPx": 10.92,
  "mesh": "3e7fb267827117ec",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, gaze right-up: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19701,
  "drawing": "38b31c1d4ff687d6",
  "leftEyeOpenPx": 26,
  "lipGapPx": 10.92,
  "mesh": "c4993826112a4e25",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "6cf390135162c6e6",
  "leftEyeOpenPx": 26,
  "lipGapPx": 24.72,
  "mesh": "01bd8d9e8eae5043",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "f502bcd67bfe6534",
  "leftEyeOpenPx": 26,
  "lipGapPx": 10.92,
  "mesh": "c4993826112a4e25",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, smile: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "e2d48709274ff67c",
  "leftEyeOpenPx": 24.13,
  "lipGapPx": 10.92,
  "mesh": "d9af3b5409a2b4bb",
  "vertices": 1023,
}
`;
